# hlmz-prep

./: Experiment-1.ipynb  Experiment-Induction-heads.ipynb  README.md  probabilities_experiment-1.ipynb  probabilities_experiment-2.ipynb  probabilities_experiment.ipynb  pyproject.toml  wrapper.ipynb
activation_patching_experiment_1/: activation_patching.ipynb
activation_patching_experiments/: activation_patching.ipynb  activation_patching_attn_mlp_token.ipynb  activation_patching_attn_mlp_token_swapped_prompts.ipynb  sentences.csv
att_heads_knockout/: knock_heads_out.ipynb
dataset/: examples-hard.csv  examples-trigger.csv  examples.csv
dataset/google/: gemma-2-2b-results.csv
dataset/meta-llama/: Llama-3.2-3B-results.csv
experiments_misc/: Experiment-Induction-heads.ipynb  classification-problem.ipynb  exercise_06_notebook.ipynb  induction_heads.ipynb
logit_probabilities_plot_1/: logit_probs.ipynb  sentences.csv
probabilites_experiment_2/: probabilities_experiment-2.py
probabilities_experiment_1/: probabilities_experiment-1.ipynb
probabilities_experiment_1/dataset/: examples-hard.csv
probabilities_experiment_1/dataset/google/: gemma-2-2b-results-probabilities-experiment-1.csv  gemma-2-2b-results.csv
probabilities_experiment_2/: probabilities_experiment-2.py
probabilities_experiment_3/: probabilities_experiment-3.py
probabilities_experiment_4/: probabilities_experiment-4.py
probabilities_experiment_5/: probabilities_experiment-5.py
results_attn/meta-llama/: Llama-3.2-3B-results.csv
(+47 files in other folders)
